fix theme slider spacing

--- a/main.css
+++ b/main.css
@@ -122,6 +122,7 @@ header {
     display: none;
     position: absolute;
     top: 3px;
+    left: 3px;
     background-color: antiquewhite;
     height: 22px;
     width: 22px;
@@ -130,7 +131,7 @@ header {
   }
 
   .switch-to-dark {
-    transform: translateX(calc(100% + 3px));
+    transform: translateX(calc(100% + 5px));
   }
 
   .switch-to-light {
